--- a/templates/first_time.html
+++ b/templates/first_time.html
@@ -9,8 +9,13 @@
             <div class="clearfix"></div>
         </div>
         <div class="mt-3" style="display: flex; justify-content: center; align-items: center;">
-            <a class="btn btn-outline-primary mr-4" href="/registerAsDonor">Donor</a>
-            <a class="btn btn-outline-primary ml-4" href="/registerAsReceiver">Receiver</a>
+            <form action="/register" method="post">
+                <input class="btn btn-outline-primary mr-4" type="submit" value="Donor" name="donor">
+                <input class="btn btn-outline-primary mr-4" type="submit" value="Receiver" name="receiver">
+            </form>
+            
+            <!-- <input class="btn btn-outline-primary mr-4" href="/registerAsDonor">Donor -->
+            <!-- <a class="btn btn-outline-primary ml-4" href="/registerAsReceiver">Receiver</a> -->
         </div>
     </div>
 </div>
